@@ -11,7 +11,7 @@ Authors@R: c(person("Chung-hong", "Chan", role = "aut", email = "chainsawtiney@g
              person("Ista", "Zahn", role = "aut"))
 Description: Streamlined data import and export by making assumptions that the user is probably willing to make: 'import()' and 'export()' determine the data structure from the file extension, reasonable defaults are used for data import and export (e.g., 'stringsAsFactors=FALSE'), web-based import is natively supported (including from SSL/HTTPS), compressed files can be read directly without explicit decompression, and fast import packages are used where appropriate.
 Depends: R (>= 2.15.0)
-Imports: tools, utils, urltools, foreign, haven, longurl, openxlsx, readODS, jsonlite, XML, curl (>= 0.6), data.table (>= 1.9.5), readxl, yaml
+Imports: tools, utils, urltools, foreign, haven, openxlsx, readODS, jsonlite, XML, curl (>= 0.6), data.table (>= 1.9.5), readxl, yaml
 Suggests: bit64, testthat, knitr, magrittr
 License: GPL-2
 VignetteBuilder: knitr
