@@ -20,4 +20,3 @@ importFrom(jsonlite, fromJSON, toJSON)
 importFrom(openxlsx, read.xlsx, write.xlsx)
 importFrom(readxl, read_excel)
 importFrom(curl, curl_download, curl_fetch_memory)
-importFrom(longurl, expand_urls)
